# qnet

./: .gitignore  README.md  TODO.md  agents.md  linear.py  pyproject.toml  run-cycle-service-ratio  run-example
.github/workflows/: build.yml
configs/: example.json
docs/: README.md  manual.typ
docs/examples/: basic_config.json  matrix_config.json
examples/: 01_basic_run_service_ratio.py  02_compare_policies.py  03_headroom_sweep.py  04_instant_fulfillment_modes.py  05_trace_summary_and_event_mix.py  06_lp_derived_config.py  07_uniform_lp_swap_rate.py
src/qbp_sim/: __init__.py  __main__.py  analysis.py  cli.py  config.py  events.py  examples.py  experiments.py  facade.py  fast.py  progress.py  simulator.py  snapshots.py  trace.py
src/qbp_sim/analysis/: __init__.py  charts.py  summaries.py
src/qbp_sim/cli/: __init__.py  commands.py  parser.py
src/qbp_sim/config/: __init__.py  input.py
src/qbp_sim/core/: __init__.py  applier.py  frontier.py  indexing.py  kernels.py  producer.py  replay.py  types.py  (+1 more)
tests/: support.py  test_cli.py  test_facade.py  test_progress.py  test_public_imports.py  test_simulator.py
tests/analysis/: test_charts.py
tests/config/: test_input_config.py
tests/core/: test_event_application.py  test_instant_fulfillment.py  test_limited_info_policy.py  test_max_min_policy.py  test_replay.py
tests/docs/: test_docs.py
tests/experiments/: test_matrix_config.py  test_service_ratio_experiments.py
tests/io/: test_snapshots.py  test_trace.py
tests/lp/: test_linear.py
theory/: MMF-nonoptimal-old.tex  dan.bib  qbp.tex  qbp_old.tex
(+14 files in other folders)
