[project]
name = "qbp-sim"
version = "0.1.0"
description = "Continuous-time Gillespie simulation for quantum backpressure networks"
readme = "README.md"
authors = [
    { name = "Vincent Mutolo", email = "vlmutolo@me.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.5",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "pydantic>=2.13.1",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "zstandard>=0.25.0",
]

[project.scripts]
qbp-sim = "qbp_sim.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
